[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bnt-nautilus"
version = "0.1.0"
description = "KiDS BNT-transformed pseudo-C_ell likelihood sampled with Nautilus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "astropy",
  "mpi4py",
  "nautilus-sampler",
  "numpy",
  "pyccl",
  "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
